[gd_scene load_steps=17 format=2]

[ext_resource path="res://Recursos/Sprites/Cinematicas/Noche_degradado.jpg" type="Texture" id=1]
[ext_resource path="res://Recursos/Sprites/Cinematicas/Casa.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Interfaz.gd" type="Script" id=3]
[ext_resource path="res://Scripts/Fade.gd" type="Script" id=4]
[ext_resource path="res://Scripts/Cinematica/Dialogo.gd" type="Script" id=5]
[ext_resource path="res://Recursos/Fuentes/LexendDeca-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scripts/Cinematica/ColorRect_dialogo.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Cinematica/Comportamiento_Enter.gd" type="Script" id=8]
[ext_resource path="res://Escenas/Items_frontend/Menu/Menu_piso.tscn" type="PackedScene" id=9]
[ext_resource path="res://Escenas/Items/Animaciones/Animacion_nivel.tscn" type="PackedScene" id=10]
[ext_resource path="res://Escenas/Cinematica/Cama.tscn" type="PackedScene" id=11]
[ext_resource path="res://Recursos/Sprites/Cinematicas/Piso_madera.jpg" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=3]
resource_name = "fade_in"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "fade_out_0_5"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="Node" type="Node" groups=[
"cinematica",
]]
script = ExtResource( 3 )

[node name="Fondo" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Piso_madera" type="Sprite" parent="."]
visible = false
position = Vector2( 640, 360 )
scale = Vector2( 1.05, 1.05 )
texture = ExtResource( 12 )

[node name="Cama" parent="." instance=ExtResource( 11 )]
visible = false

[node name="Casa" type="Sprite" parent="."]
position = Vector2( 640, 427 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="Menu_piso" parent="." instance=ExtResource( 9 )]
position = Vector2( 0, 600 )

[node name="Interfaz" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="Interfaz"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -500.0
grow_horizontal = 2
grow_vertical = 2
color = Color( 0, 0, 0, 0.364706 )
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Interfaz/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 20.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Interfaz/ColorRect/MarginContainer"]
margin_right = 1180.0
margin_bottom = 150.0
custom_fonts/normal_font = SubResource( 1 )
text = "asdasd"
scroll_active = false
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Interfaz/ColorRect/MarginContainer"]
margin_right = 1180.0
margin_bottom = 150.0
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
text = "[ ENTER ]"
align = 2
valign = 2
script = ExtResource( 8 )

[node name="Fade" type="ColorRect" parent="Interfaz"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Interfaz/Fade"]
autoplay = "fade_out"
playback_speed = 0.5
anims/fade_in = SubResource( 3 )
anims/fade_out = SubResource( 4 )
anims/fade_out_0_5 = SubResource( 4 )

[node name="Timer" type="Timer" parent="Interfaz/Fade"]

[node name="FadeInOut" type="ColorRect" parent="Interfaz"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Animacion_nivel" parent="." instance=ExtResource( 10 )]

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2( 640, 360 )
current = true
smoothing_speed = 0.0
[connection signal="animation_finished" from="Interfaz/Fade/AnimationPlayer" to="Interfaz/Fade" method="_on_AnimationPlayer_animation_finished"]
